compiler/crates/types/tests/typeerr/let_annotation_mismatch.th
ให้ n: จำนวนเต็ม = "hello";
